--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@clerk/nextjs": "^6.33.1",
     "@google/genai": "^1.21.0",
     "@neondatabase/serverless": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@toast-ui/react-editor": "^3.2.3",
     "axios": "^1.12.2",
@@ -25,10 +27,10 @@
     "mime": "^4.1.0",
     "moment": "^2.30.1",
     "next": "15.5.4",
+    "razorpay": "^2.9.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "razorpay": "^2.9.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
